--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
               <div class="thumbnail">            
                   <div class="magicNumber">
                       <h3>You have 10 seconds to answer.</h3><p>                    
-                      <h3>Time remaining:
+                      <h3>Timer:
                         <span id="display"></span> 
                       </h3>
                   </div> 
@@ -77,9 +77,6 @@
               </div>
             </div>
         </div>     
-</div>
-<div align="center">
-  <button id="submit" class="btn btn-primary btn-lg"><h1><span class="glyphicon glyphicon-hand-right"></span>  Submit</h1></button></div> 
 </div>
 <script type="text/javascript" src="https://code.jquery.com/jquery-2.2.0.js"></script>
 <script type="text/javascript" src="./assets/javascript/game.js"></script>
