--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
      <div class="jumbotron" display="flex" justify-content="center" align-items="center">
        <div class="image-center"><img src="./assets/img/Trivial-Trivia-Game.png" alt="Banner" class="img-responsive center-block"></div> 
     </div>
-<div class="container" > 
+<div class="container" id="hide"> 
         <div class="row" display="flex"></div>
             <div class="col-md-6">
               <div class="thumbnail">            
                   <div class="magicNumber">
-                      <h3>You have 10 seconds to answer.</h3><p>                    
+                      <h3>You have 20 seconds!</h3><p>                    
                       <h3>Timer:
                         <span id="display"></span> 
                       </h3>
@@ -69,6 +69,7 @@
                 <div class="modal-content">
                   <div class="modal-header">
                     <h4>
+                      <span id="ans"></span><p>
                       <span id="result"></span>
                       <button type="button" id="play-again" class="btn btn-default" data-dismiss="modal">Play again!</button>
                     </h4>                 
