--- a/index.html
+++ b/index.html
@@ -79,6 +79,9 @@
             </div>
         </div>     
 </div>
+<div>
+    <div class="image-gameover" id="hide2"><img src="./assets/img/Game-Over.png" alt="Banner" class="img-responsive center-block" id="hide1"></div> 
+</div>
 <script type="text/javascript" src="https://code.jquery.com/jquery-2.2.0.js"></script>
 <script type="text/javascript" src="./assets/javascript/game.js"></script>
 </body>
