--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
-<body background="./assets/img/cine1.jpg" id="bg" alt"">
+<body background="./assets/img/cine1.jpg" id="bg">
      <div class="jumbotron" display="flex" justify-content="center" align-items="center">
        <div class="image-center"><img src="./assets/img/Trivial-Trivia-Game.png" alt="Banner" class="img-responsive center-block"></div> 
     </div>
@@ -61,8 +61,7 @@
                     </ol>
                   </div>  
               </div>
-          </div> 
-                 
+          </div>      
           <div id="myModal" class="modal fade" role="dialog">
               <div class="modal-dialog">
                 <!-- Modal content-->
